# FilmesApi_Django

./: db.sqlite3  manage.py  pyproject.toml
addFilmes/: admin.py  apps.py  urls.py
addFilmes/migrations/: 0001_initial.py
addFilmes/models/: __init__.py  models_cartFilmes.py
addFilmes/serializers/: __init__.py  serializer_cartFilmes.py
addFilmes/viewsets/: __init__.py  viewsets_cartFilmes.py
apiFilmes/: asgi.py  settings.py  urls.py  wsgi.py
comentarios/: admin.py  urls.py
comentarios/migrations/: 0001_initial.py
comentarios/models/: __init__.py  comentarios.py
comentarios/serializers/: __init__.py  serializer_comentarios.py
comentarios/viewsets/: __init__.py  viewsets_comentarios.py
user/: urls.py
user/serializer/: user_serializer.py
user/viewsets/: __init__.py  user_viewsets.py
