[project]
name = "apifilme"
version = "0.1.0"
description = ""
authors = [
    {name = "derekH13",email = "168042164+derekH13@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-extensions (>=4.1,<5.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "filmesapi-django"
version = "0.1.0"
description = "Projeto Django com DRF"
authors = ["Seu Nome <seu@email.com>"]
readme = "README.md"
packages = [{ include = "user" }, { include = "comentarios" }, { include = "apiFilmes" }, { include = "addFilmes" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
djangorestframework-authtoken = "^1.1"

[tool.poetry.dev-dependencies]
# opcional, ex: black, isort, etc

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

