[tool.poetry]
name = "filmesapi-django"
version = "0.1.0"
description = "Projeto Django com DRF"
authors = ["derekH13 <168042164+derekH13@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "user" },
    { include = "comentarios" },
    { include = "apiFilmes" },
    { include = "addFilmes" }
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.15"
django-extensions = "^4.1"
djangorestframework-simplejwt = "^5.5"
djangorestframework-authtoken = "^1.1"

[tool.poetry.dev-dependencies]
# Aqui você pode adicionar ferramentas de desenvolvimento (opcional)

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
